<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        style="@style/MyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:gravity="center_vertical"
        android:hint="@string/search_hint"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_search"
            style="@style/MyTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:layout_gravity="center_vertical"

            android:textColor="@color/purple_500"
            android:selectAllOnFocus="true"
            android:text="royallachinov"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/search"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/searchInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchInputLayout"
        app:layout_constraintTop_toTopOf="@+id/searchInputLayout"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_view_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />

    <TextView
        android:id="@+id/text_view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/image_view_user_image"
        app:layout_constraintStart_toStartOf="@+id/image_view_user_image"
        app:layout_constraintTop_toBottomOf="@+id/image_view_user_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_name"
        tools:listitem="@layout/item_repo"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <TextView
        android:id="@+id/text_view_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/pb_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>