<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:padding="8dp"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/text_view_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:gravity="start|center"
            android:lines="2"
            android:textSize="18sp"
            android:padding="2dp"
            android:textColor="#505050"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_repo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:maxLines="2"
            android:padding="2dp"
            android:textColor="#505050"
            android:ellipsize="end"
            android:gravity="start|center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>